--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
     <body>
         <div id="media">
             <img src="image/sol.png" id="sol">
-            <img src="image/ciel.png" id="ciel">
+            <img src="image/Terraria-background-jeu.jpg" id="ciel">
             <img src="image/joueur.png" id="joueur">
             <img src="image/joueur-mort.png" id="joueur-mort">
             <img src="image/monstre-attaque.png" id="monstre-attaque">
