--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Un clone de Flappy Bird</title>
-        <meta name="description" content="Un clone de Flappy Bird! par J. Ky Marsh">
+        <meta name="description" content="Un clone de Flappy Bird! par Tristan B-C">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="decoration/normalize.min.css">
@@ -23,10 +23,10 @@
     </head>
     <body>
         <div id="media">
-            <img src="image/sol.png" id="sol">
+            <img src="image/Grass.png" id="sol">
             <img src="image/Terraria-background-jeu.jpg" id="ciel">
-            <img src="image/joueur.png" id="joueur">
-            <img src="image/joueur-mort.png" id="joueur-mort">
+            <img src="image/bluebird.png" id="joueur">
+            <img src="image/Bluebirddeath.png" id="joueur-mort">
             <img src="image/monstre-attaque.png" id="monstre-attaque">
             <img src="image/monstre.png" id="monstre">
             <audio src="son/03-marble-zone.mp3" id="marbleZoneSong" controls loop preload="auto" ></audio>
