--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
         <div id="media">
             <img src="image/Grass.png" id="sol">
             <img src="image/Terraria-background-jeu.jpg" id="ciel">
-            <img src="image/bluebird.png" id="joueur">
+            <img src="image/BlueBird.png" id="joueur">
             <img src="image/Bluebirddeath.png" id="joueur-mort">
             <img src="image/monstre-attaque.png" id="monstre-attaque">
             <img src="image/monstre.png" id="monstre">
