--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
         <script src="action/libs/Son.js"></script>
         <script src="action/config.js"></script>
         <script src="action/main.js"></script>
-
+ddd
     </head>
     <body>
         <div id="media">
